--- a/css/styles.css
+++ b/css/styles.css
@@ -328,7 +328,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
-  color: #ffffff;
+  color: #f4f4fd;
   padding: 40px 32px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -436,4 +436,237 @@ a {
 .social-icon-footer:hover,
 .social-icon-footer:focus {
   background-color: #31d0aa;
+}
+/* Modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.modal {
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  position: relative;
+}
+
+.modal-close {
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 100%;
+  background-color: #e7e9fc;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  line-height: 0;
+  top: 24px;
+  right: 24px;
+  cursor: pointer;
+}
+.modal-close:hover {
+  background-color: #404bbf;
+}
+.modal-close:hover .modal-close-icon {
+  fill: #ffffff;
+}
+.modal-close-icon {
+  fill: #2e2f42;
+}
+
+.modal-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  padding: 72px 24px 16px 24px;
+}
+.modal-form {
+  padding: 0 24px;
+}
+.modal-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+}
+.modal-input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  pointer-events: none;
+}
+.modal-input:focus {
+  border-color: #404bbf;
+  outline: none;
+}
+.modal-input:focus + .modal-input-icon {
+  fill: #404bbf;
+}
+.modal-input-icon-wrapper {
+  position: relative;
+}
+.modal-input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-input-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-top: 8px;
+  margin-bottom: 4px;
+}
+.modal-comment-wrapper {
+}
+.modal-text-area {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding: 8px 16px;
+  resize: none;
+}
+.modal-text-area:focus {
+  outline: none;
+  border-color: #404bbf;
+}
+
+.modal-consent-label {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 12px;
+}
+
+.modal-consent-label a {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+  margin-left: 2px;
+}
+
+.modal-consent-label span {
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.modal-consent-checkbox:checked + .modal-consent-label span {
+  border: none;
+  background-color: #404bbf;
+  fill: #ffffff;
+}
+
+.modal-btn-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.modal-submit-btn {
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+/* Footer Subscribe */
+.footer-subscribe-container {
+  margin-left: 80px;
+}
+.footer-subscribe {
+  display: flex;
+  gap: 24px;
+}
+.input-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.input-subscribe {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 16px;
+}
+.input-btn-subscribe {
+  border-radius: 4px;
+  padding: 8px 16px 8px 24px;
+  width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border: none;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  padding-right: 24px;
+}
+.input-subscribe::placeholder {
+  color: #fff;
+}
+.input-btn-icon {
+  fill: #fff;
 }
