--- a/css/styles.css
+++ b/css/styles.css
@@ -483,6 +483,7 @@ a {
   top: 24px;
   right: 24px;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close:hover {
   background-color: #404bbf;
@@ -512,6 +513,7 @@ a {
   width: 100%;
   height: 40px;
   padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input-icon {
   position: absolute;
@@ -621,6 +623,11 @@ a {
   color: #fff;
   border: none;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-submit-btn:hover,
+.modal-submit-btn:focus {
+  background-color: #404bbf;
 }
 /* Footer Subscribe */
 .footer-subscribe-container {
@@ -663,6 +670,11 @@ a {
   justify-content: center;
   gap: 16px;
   padding-right: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-btn-subscribe:hover,
+.input-btn-subscribe:focus {
+  background-color: #404bbf;
 }
 .input-subscribe::placeholder {
   color: #fff;
