--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,10 @@ a {
 /* Header */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
+  box-shadow:
+    0 1px 6px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 
 .logo {
@@ -122,10 +124,8 @@ a {
   background: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+  background-image:
+    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -293,8 +293,10 @@ a {
   padding: 32px 16px;
 }
 .team-item {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow:
+    0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: #fff;
 }
 /* Portfolio */
@@ -344,8 +346,10 @@ a {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow:
+    0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 .portfolio-img {
   display: block;
@@ -462,7 +466,9 @@ a {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+  box-shadow:
+    0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   position: relative;
@@ -485,10 +491,12 @@ a {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close:hover {
+.modal-close:hover,
+.modal-close:focus {
   background-color: #404bbf;
 }
-.modal-close:hover .modal-close-icon {
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
   fill: #ffffff;
 }
 .modal-close-icon {
@@ -594,14 +602,22 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  fill: transparent;
+}
+.modal-consent-icon {
+  fill: #ffffff;
+  opacity: 0;
 }
 .modal-consent-checkbox:checked + .modal-consent-label span {
   border: none;
   background-color: #404bbf;
   fill: #ffffff;
 }
-
+.modal-consent-checkbox:checked + .modal-consent-label .modal-consent-icon {
+  opacity: 1;
+}
+.modal-consent-icon span {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-btn-wrapper {
   display: flex;
   justify-content: center;
@@ -631,7 +647,7 @@ a {
 }
 /* Footer Subscribe */
 .footer-subscribe-container {
-  margin-left: 80px;
+  margin-left: auto;
 }
 .footer-subscribe {
   display: flex;
@@ -647,11 +663,25 @@ a {
 .input-subscribe {
   border: 1px solid #fff;
   border-radius: 4px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  outline: none;
   width: 264px;
   height: 40px;
   background-color: transparent;
   color: #fff;
   padding: 8px 16px;
+}
+.input-subscribe:focus {
+  border-color: #31d0aa;
+}
+.input-subscribe::placeholder {
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
 .input-btn-subscribe {
   border-radius: 4px;
@@ -674,11 +704,9 @@ a {
 }
 .input-btn-subscribe:hover,
 .input-btn-subscribe:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
-.input-subscribe::placeholder {
-  color: #fff;
-}
+
 .input-btn-icon {
   fill: #fff;
 }
