--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,7 @@ a {
   color: #2e2f42;
   padding: 8px 16px;
   resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-text-area:focus {
   outline: none;
@@ -602,6 +603,11 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-consent-icon {
   fill: #ffffff;
@@ -615,9 +621,7 @@ a {
 .modal-consent-checkbox:checked + .modal-consent-label .modal-consent-icon {
   opacity: 1;
 }
-.modal-consent-icon span {
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .modal-btn-wrapper {
   display: flex;
   justify-content: center;
@@ -673,6 +677,7 @@ a {
   background-color: transparent;
   color: #fff;
   padding: 8px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-subscribe:focus {
   border-color: #31d0aa;
