--- a/css/styles.css
+++ b/css/styles.css
@@ -472,6 +472,7 @@ a {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   position: relative;
+  padding: 72px 24px 24px;
 }
 
 .modal-close {
@@ -510,10 +511,11 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  padding: 72px 24px 16px 24px;
+  padding: 0;
+  margin-bottom: 16px;
 }
 .modal-form {
-  padding: 0 24px;
+  padding: 0;
 }
 .modal-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -544,6 +546,7 @@ a {
 .modal-input-wrapper {
   display: flex;
   flex-direction: column;
+  margin-bottom: 8px;
 }
 
 .modal-input-label {
@@ -552,10 +555,10 @@ a {
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  margin-top: 8px;
   margin-bottom: 4px;
 }
 .modal-comment-wrapper {
+  margin-bottom: 16px;
 }
 .modal-text-area {
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -565,10 +568,13 @@ a {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  color: #2e2f42;
+  color: rgba(46, 47, 66, 0.4);
   padding: 8px 16px;
   resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-text-area::placeholder {
+  color: rgba(46, 47, 66, 0.4);
 }
 .modal-text-area:focus {
   outline: none;
@@ -577,13 +583,12 @@ a {
 
 .modal-consent-label {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.33;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
   align-items: center;
   position: relative;
-  margin-top: 12px;
 }
 
 .modal-consent-label a {
@@ -626,7 +631,6 @@ a {
   display: flex;
   justify-content: center;
   margin-top: 24px;
-  margin-bottom: 24px;
 }
 .modal-submit-btn {
   border-radius: 4px;
